Add more on exercises.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
     <section id="Programme">
       <h3>Welcome to the Course!</h3>
 	  <p>ExaLAT: Lattice Field Theory at the Exascale Frontier.</p>
+	  <p>Prof. Andreas Juettner, ExaLAT</p>
       <p><a href = "./src/timetable.html">Timetable and Local Information</a></p>
-	  <img class = "plain" src ="img/epcc_logo.png" alt = "EPCC Logo" /><br>
+	  <div class="lblock">
+	  <img class = "plain" src ="img/epcc_logo.png" alt = "EPCC Logo" />
+	  </div>
+	  <div class="lblock">
 	  <img class = "plain" src ="img/exalat-logo-sml.png" alt = "ExaLAT Logo" />
+	  </div>
     </section>
 
     </div>
