--- a/src/exlat.html
+++ b/src/exlat.html
@@ -105,10 +105,8 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
   <section>
     <h4> Overarching theme of today's exercises. </h4>
     <div class="lblock">
-      <img class = "plain" src = "./conjgradfromwikipedia.svg"
-           alt = "Schematic diagram represeting data transfer between
-                  processor and memory. The processor may have one or
-                  more levels of cachme memory."/>
+      <img class = "plain" src = "./conjgradfromwikipedia.svg" alt = "Basic conjugate gradient algorithm image from Wikipedia"/><br>
+	  Img from: https://en.wikipedia.org/wiki/Conjugate_gradient_method	   
     </div>
 
     <div class="rblock">
@@ -117,7 +115,6 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
         <li> On multiple-GPUs </li>
 		<li> Optimally </li>
 		<li> Remotely </li>
-
       </ol>
     </div>
 	
@@ -126,10 +123,8 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 	<section>
     <h4> Overarching theme of today's exercises. </h4>
     <div class="lblock">
-      <img class = "plain" src = "./conjgradfromwikipedia.svg"
-           alt = "Schematic diagram represeting data transfer between
-                  processor and memory. The processor may have one or
-                  more levels of cachme memory."/>
+      <img class = "plain" src = "./conjgradfromwikipedia.svg" alt = "Basic conjugate gradient algorithm image from Wikipedia"/><br>
+      Img from: https://en.wikipedia.org/wiki/Conjugate_gradient_method	        
     </div>
 
     <div class="rblock">
@@ -147,7 +142,6 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 	
 	<section>
 	<h4> How to begin...</h4>
-	
 	<ul>
     <li>Let's start with the most basic building blocks</li>
 	<li>If we implement these, we can begin to build up our arsenal of kernels that we can use to construct our vanilla-CG algorithm.</li>
