--- a/src/timetable.html
+++ b/src/timetable.html
@@ -162,8 +162,8 @@
       <p style = "font-size: 80%" align = "left">
       Once:
       <p style = "font-size: 60%" align = "left">
-      <code>$ module load gcc cuda </code><br>
-      <code>$ cd exlat-gpu-course/exercises/cuda-intro/src_c</code></p>
+      <code>$ module load nvidia/cuda-10.2</code><br>
+      <code>$ cd exlat-gpu-course/exercises/...</code></p>
 
       <p style = "font-size: 80%" align = "left">
       Edit the file (method of your choice):
