--- a/src/timetable.html
+++ b/src/timetable.html
@@ -123,7 +123,7 @@
 		<dt>10:10 <a href = "./exlat.html">ExaLAT</a>: exercise introduction and discussion</dt>
 		<dt>10:30 <a href = "#exercise-location">Exercise time </a></dt>
 		<dt>11:00 Break</dt>
-		<dt>11:20 <a href = "./exlat2.html">ExaLAT</a>: multi-GPU methods</dt>
+		<dt>11:20 <a href = "./exlat2.html">ExaLAT2</a>: multi-GPU methods</dt>
 		<dt>11:40 <a href = "#exercise-location">Exercise continuation / multi-GPU exercise</a></dt>
 		<dt>12:30 Lunch </dt>
 		<dt> <br> </dt>
